Add verbose argument on travis configuration file

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ sudo: false
 php:
     - 7.0
 before_install: "composer install"
-script: "vendor/bin/phpunit"
+script: "vendor/bin/phpunit --verbose"
